syntax = "proto3";

package OPCAIC.protos;

// The greeting service definition.
service Master {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 client_id = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
